--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,7 +1,8 @@
+root: true
 env:
   browser: true
   es2021: true
-extends: 'eslint:recommended'
+extends: "eslint:recommended"
 plugins:
   - template
 parserOptions:
@@ -136,7 +137,7 @@ rules:
   spaced-comment:
     - "error"
     - always
-  strict: "error"
+  strict: 0
   valid-jsdoc:
     - "warn"
     - prefer:
