--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -93,7 +93,6 @@ repos:
   rev: v1.29.0
   hooks:
   - id: yamllint
-    args: [-c=./.yamllint.yaml]
     exclude: ^(_vendor)
 
 - repo: "https://github.com/zricethezav/gitleaks"
@@ -113,7 +112,7 @@ repos:
     alias: ec
     args:
     - -no-color
-    exclude: ^(LICENSE.txt$|README.md$|assets/vendor/|package(-lock)?.json$|static/|assets/sass/layouts/_layouts\.scss$) # yamllint:disable-line
+    exclude: ^(LICENSE.txt$|README.md$|assets/vendor/|package(-lock)?.json$|static/|assets/sass/layouts/_layouts\.scss$) # yamllint disable-line
 
 - repo: "https://github.com/streetsidesoftware/cspell-cli"
   rev: v6.28.0
