--- a/.stylelintrc.yaml
+++ b/.stylelintrc.yaml
@@ -81,7 +81,7 @@ rules:
   # scss/selector-no-redundant-nesting-selector: true
   selector-class-pattern:
     - "^[a-z0-9\\-]+$"
-    - message: Selector should be written in lowercase with hyphens (selector-class-pattern) # yamllint disable:line-length
+    - message: Selector should be written in lowercase with hyphens (selector-class-pattern) # yamllint disable-line
   selector-list-comma-newline-after: always
   selector-max-compound-selectors: 3
   selector-max-id: 0
