Add an option to search _all_ pages
We still only search content, not section listings, but this allows
users to find index pages that have content.

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -70,6 +70,7 @@ params:
   poweredby: true
   realfavicongenerator: true
   sassTranspiler: libsass
+  searchAllPages: true
   sidebar: true
   submitted: true
   # useBaseURL: false
