Add Netlify headers configuration
This is only used if the site's config has the necessary settings, so
can ignored when not using Netlify.

Note that the exampleSite in this repository is configured for Netlify.
Also note that the header currently configured is a
Content-Security-Policy compatible with current ESR versions of Firefox.
Eventually (as ESR browsers are replaced with newer versions) it will
be possible to use a 'tighter' CSP by default.

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -41,13 +41,19 @@ outputFormats:
     baseName: _redirects
     isPlainText: true
     mediaType: "text/nredirects"
+  nheaders:
+    baseName: _headers
+    isPlainText: true
+    mediaType: "text/nheaders"
 
 mediaTypes:
+  "text/nheaders":
+    suffixes: ""
   "text/nredirects":
     suffixes: ""
 
 outputs:
-  home: ["HTML", "RSS", "JSON", "SearchIndex", "nredirects"]
+  home: ["HTML", "RSS", "JSON", "SearchIndex", "nredirects", "nheaders"]
   section: ["HTML", "RSS", "JSON"]
 
 params:
