Ignore more Edge Tools hints in VS Code
Edge Tools may or may not be useful with Hugo, but for now keep them, but
disable non-relevant messages related to Go
templating.

--- a/.hintrc
+++ b/.hintrc
@@ -3,11 +3,17 @@
     "development"
   ],
   "hints": {
-    "axe/language": [
+    "axe/language": "off",
+    "axe/structure": "off",
+    "apple-touch-icons": "off",
+    "compat-api/html": [
       "default",
       {
-        "html-lang-valid": "off"
+        "ignore": [
+          "meta[name=theme-color]"
+        ]
       }
-    ]
+    ],
+    "manifest-file-extension": "off"
   }
 }
