--- a/.hintrc
+++ b/.hintrc
@@ -14,6 +14,14 @@
         ]
       }
     ],
-    "manifest-file-extension": "off"
+    "manifest-file-extension": "off",
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "width: fit-content"
+        ]
+      }
+    ]
   }
 }
