--- a/layouts/_default/_markup/render-heading.html.example
+++ b/layouts/_default/_markup/render-heading.html.example
@@ -1,4 +1,4 @@
-<h{{ .Level }} id="{{ .Anchor | safeURL }}" class="icon-inline"{{ range $k, $v := .Attributes }}{{ printf " %s=%q" $k $v | safeHTMLAttr }}{{ end }}>
+<h{{ .Level }}{{ if not (isset .Attributes "id") }} id="{{ .Anchor | safeURL }}"{{ end }} class="icon-inline"{{ range $k, $v := .Attributes }}{{ printf " %s=%q" $k $v | safeHTMLAttr }}{{ end }}>
 {{- .Text | safeHTML -}}
 <a class="icon-link" href="#{{ .Anchor | safeURL }}" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
   <path stroke="none" d="M0 0h24v24H0z" fill="none" />
