Fix word order in render-image comment
This uses expected English word order, but has no effect on the code.

--- a/layouts/_default/_markup/render-image.html.example
+++ b/layouts/_default/_markup/render-image.html.example
@@ -4,7 +4,7 @@
 {{ $srcset := "" -}}
 {{ $width := "" -}}
 
-{{/* Only change the below code if you know what you are doing. */}}
+{{/* Only change the code below if you know what you are doing. */}}
 {{ $height := "" -}}
 {{ $maxwidth := site.Params.imageMaxWidth -}}
 {{ $realwidth := 0 -}}
