Use Hugo's default robots.txt generation template
It adds a pointer the sitemap for production deploys.

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -8,6 +8,7 @@ pluralizelisttitles: false
 paginate: 10
 paginatePath: "page"
 removePathAccents: true
+enableRobotsTXT: true
 rssLimit: 20
 
 taxonomies:
