--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,8 @@ repos:
   rev: v4.4.0
   hooks:
   - id: check-added-large-files
-  # - Prevent giant files from being committed.
+    exclude: ^(exampleSite/assets/images/pi-jtag\.png$)
+    # - Prevent giant files from being committed.
   - id: check-case-conflict
   # - checks for files that would conflict in
   #   case-insensitive filesystems.
