Ignore some VSCode hints and another Hugo keyword
This is a housekeeping commit for avoiding false positives.

--- a/.hintrc
+++ b/.hintrc
@@ -20,6 +20,8 @@
           "width: fit-content"
         ]
       }
-    ]
+    ],
+    "apple-touch-icons": "off",
+    "manifest-file-extension": "off"
   }
 }
