Replace inline styles for code highlighting
Our CSP doesn't allow inline styles, so move the styles for code
highlighting to using classes and CSS.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -82,6 +82,8 @@ repos:
     - stylelint@14.14.1
     - stylelint-config-standard-scss@6.1.0
     - stylelint-scss@4.3.0
+    args:
+    - --allow-empty-input
 
 - repo: "https://github.com/igorshubovych/markdownlint-cli"
   rev: v0.33.0
@@ -127,6 +129,6 @@ repos:
     - --show-context
     - --show-suggestions
     - --validate-directives
-    exclude: ^(cspell.json$) # yamllint disable-line
+    exclude: ^(cspell.json$|exampleSite/assets/sass/_custom.scss$) # yamllint disable-line
 # yamllint enable rule:key-ordering
 ...
