Style the table of contents
And make it ordered (this is a per-site setting in Hugo's configuration)

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -29,8 +29,9 @@ markup:
     codeFences: true
     noClasses: false
   tableOfContents:
-    startLevel: 2
     endLevel: 5
+    ordered: true
+    startLevel: 2
 
 outputFormats:
   SearchIndex:
