Ignore another Edge Dev Tools complaint
We want overflow-wrap: anywhere even though not all browsers support it.

--- a/.hintrc
+++ b/.hintrc
@@ -17,7 +17,8 @@
       "default",
       {
         "ignore": [
-          "width: fit-content"
+          "width: fit-content",
+          "overflow-wrap: anywhere"
         ]
       }
     ],
