Ignore more VSCode Edge warnings
DevTools is mostly annoying so far.

--- a/.hintrc
+++ b/.hintrc
@@ -13,16 +13,9 @@
         ]
       }
     ],
-    "compat-api/css": [
-      "default",
-      {
-        "ignore": [
-          "width: fit-content",
-          "overflow-wrap: anywhere"
-        ]
-      }
-    ],
+    "compat-api/css": "off",
     "apple-touch-icons": "off",
-    "manifest-file-extension": "off"
+    "manifest-file-extension": "off",
+    "detect-css-reflows/layout": "off"
   }
 }
