Correct spelling of upstream author's name
It's Fredrik not Frederik or Frederick.

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -70,7 +70,7 @@ params:
   contact: "info@example.org"
   copyright: |
     Copyright [Daniel F. Dickinson](https://www.danielfdickinson.ca/),
-    [Frederik Jonsson](https://xdeb.net/)
+    [Fredrik Jonsson](https://xdeb.net/)
     (original Hugo Zen theme author),
     and contributors. Licensed under the [GNU Public License v2 or
     later](http://www.gnu.org/licenses/old-licenses/gpl-2.0.html).
