Add PowerShell hugo audit and other checks
Adds basic versions of the hugo-audit and related site validation
scripts for Windows, using PowerShell.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -118,7 +118,7 @@ repos:
     exclude: ^(LICENSE.txt$|README.md$|assets/jsvendor/|package(-lock)?.json$|static/|assets/sass/layouts/_layouts\.scss$) # yamllint disable-line
 
 - repo: "https://github.com/streetsidesoftware/cspell-cli"
-  rev: v6.28.0
+  rev: v6.31.0
   hooks:
   - id: cspell
     args:
@@ -129,6 +129,6 @@ repos:
     - --show-context
     - --show-suggestions
     - --validate-directives
-    exclude: ^(cspell.json$|exampleSite/assets/sass/_custom.scss$|assets/libs/) # yamllint disable-line
+    exclude: ^(cspell.json$) # yamllint disable-line
 # yamllint enable rule:key-ordering
 ...
