Do not allow compound words
And fix spellings previously missed and add ignore words now required.

Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ exampleSite/public/
 .disabled-env
 /hugo-cache
 vendor/
-# Avoid accidentally commiting files that ought to be in a demo site with LFS
+# Avoid accidentally committing files that ought to be in a demo site with LFS
 *.jpg
 *.png
 *.jpeg
