Update html validation for path change
We no longer end up with public under exampleSite, so we need adjust
paths.

Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/.htmlvalidateignore
+++ b/.htmlvalidateignore
@@ -1,5 +1,5 @@
-exampleSite/public/*
-!exampleSite/public/documentation/
-exampleSite/public/**/page/
-!exampleSite/public/about/
-!exampleSite/public/index.html
+public/*
+!public/documentation/
+public/**/page/
+!public/about/
+!public/index.html
