Update exampleSite with a separate post section
This allows to test a 'blog' section vs web page section for schema.org
meta tags.

Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -7,7 +7,6 @@ enableGitInfo: true
 enableRobotsTXT: true
 ignoreErrors: ["error-disable-taxonomy"]
 languageCode: "en-CA" # non-multilingual only
-pluralizelisttitles: false
 paginate: 10
 paginatePath: "page"
 removePathAccents: true
@@ -85,7 +84,7 @@ params:
   logoWidth: 32
   mainSections:
     - documentation
-  mobileMenu: true
+    - post
   noImageConvert: false
   noSrcSetDefault: false
   pageCanonical: false
