Make breadcrumbs opt-in on non-blogSections
on specified sections except blogSections (which is a configurable set
which is defaulted to blog and post).

Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -66,6 +66,9 @@ params:
     name: "Your Name"
     url: "https://example.org/somepage"
     avatar: "path/to/some-image.jpg"
+  breadcrumbSections:
+    - about
+    - documentation
   contact: "info@example.org"
   copyright: |
     Copyright [Daniel F. Dickinson](https://www.danielfdickinson.ca/),
