--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -88,6 +88,7 @@ params:
   mainSections:
     - documentation
     - post
+  mobilemenu: true
   noImageConvert: false
   noSrcSetDefault: false
   pageCanonical: false
