--- a/.stylelintrc.yaml
+++ b/.stylelintrc.yaml
@@ -87,6 +87,7 @@ rules:
   selector-max-id: 0
   # selector-no-qualifying-type: true
   selector-no-vendor-prefix: true
+  selector-not-notation: simple
   selector-pseudo-element-colon-notation: double
   selector-pseudo-element-no-unknown: true
   shorthand-property-no-redundant-values: true
