Add test content and config for new table styles
Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -24,6 +24,9 @@ permalinks:
 
 markup:
   goldmark:
+    parser:
+      attribute:
+        block: true
     renderer:
       unsafe: false
   highlight:
@@ -105,6 +108,7 @@ params:
   searchAllPages: true
   sidebar: true
   submitted: true
+  tables: true
   # themeColor: #aaa
   # useBaseURL: false
 
