Include all sections in 'breadcrumbSections"
Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -70,8 +70,10 @@ params:
     url: "https://example.org/somepage"
     avatar: "path/to/some-image.jpg"
   breadcrumbSections:
+    - ""
     - about
     - documentation
+    - post
   contact: "info@example.org"
   copyright: |
     Copyright [Daniel F. Dickinson](https://www.danielfdickinson.ca/),
