Exclude github workflows from pre-commit yamllint
Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -97,7 +97,7 @@ repos:
   rev: v1.32.0
   hooks:
   - id: yamllint
-    exclude: ^(_vendor)
+    exclude: ^(_vendor|.github)
 
 - repo: "https://github.com/zricethezav/gitleaks"
   rev: v8.17.0
