Update pre-commit and workaround stylelint issue
Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 # yamllint disable rule:line-length
 # Initially copied from https://github.com/davidsneighbour/kollitsch.dev/blob/main/.pre-commit-config.yaml
-# cspell:ignore reforme
+# cspell:ignore reforme stylelintrc
 # yamllint enable
 fail_fast: true
 minimum_pre_commit_version: 3.1.1
@@ -83,11 +83,13 @@ repos:
     - stylelint-config-standard-scss@9.0.0
     - stylelint-scss@4.6.0
     args:
+    - --config
+    - .stylelintrc.yaml
     - --allow-empty-input
     - --quiet-deprecation-warnings
 
 - repo: "https://github.com/igorshubovych/markdownlint-cli"
-  rev: v0.35.0
+  rev: v0.36.0
   hooks:
   - id: markdownlint
     args: [--config, .markdownlint.json]
@@ -119,7 +121,7 @@ repos:
     exclude: ^(LICENSE.txt$|README.md$|assets/jsvendor/|package(-lock)?.json$|static/|assets/sass/layouts/_layouts\.scss$) # yamllint disable-line
 
 - repo: "https://github.com/streetsidesoftware/cspell-cli"
-  rev: v7.0.1
+  rev: v7.3.0
   hooks:
   - id: cspell
     args:
