--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -6,7 +6,7 @@ disableKinds: [taxonomy, terms]
 enableGitInfo: true
 enableRobotsTXT: true
 ignoreErrors: ["error-disable-taxonomy"]
-languageCode: "en-CA" # non-multilingual only
+languageCode: "en" # non-multilingual only
 paginate: 10
 paginatePath: "page"
 removePathAccents: true
@@ -108,6 +108,7 @@ params:
   tables: true
   # themeColor: #aaa
   # useBaseURL: false
+  rssIncludeFullArticle: true
 
 privacy:
   disqus:
